# num_opt_project

./: README.md
bern_traj/: CMakeLists.txt  RH_INSTALL  package.xml
bern_traj/config/: multi_traj_params.yaml  single_traj_params.yaml
bern_traj/include/bern_traj/: admm.hpp  bernstein_trajectory.hpp  obstacle.h  optimizer.hpp  trajectory.h  trajectory_manager.hpp  waypoint.h
bern_traj/launch/: multi_traj_launch.py
bern_traj/scripts/: eval_plots.py  traj_eval.py
bern_traj/src/: admm.cpp  bernstein_trajectory.cpp  optimizer.cpp  ros2_humble_ws.code-workspace  trajectory_manager.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bern_traj/include/bern_traj/: admm.hpp  bernstein_trajectory.hpp  obstacle.h  trajectory.h  trajectory_manager.hpp  waypoint.h
install/bern_traj/lib/bern_traj/: trajectory_manager_num_opt
install/bern_traj/share/ament_index/resource_index/package_run_dependencies/: bern_traj
install/bern_traj/share/ament_index/resource_index/parent_prefix_path/: bern_traj
install/bern_traj/share/bern_traj/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/bern_traj/share/bern_traj/cmake/: bern_trajConfig-version.cmake  bern_trajConfig.cmake
install/bern_traj/share/bern_traj/config/: multi_traj_params.yaml
install/bern_traj/share/bern_traj/environment/: ament_prefix_path.dsv  path.dsv
install/bern_traj/share/bern_traj/launch/: multi_traj_launch.py
install/uav_msgs/include/uav_msgs/uav_msgs/msg/: consensus_traj.h  consensus_traj.hpp  position_cmd.h  position_cmd.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/uav_msgs/share/ament_index/resource_index/package_run_dependencies/: uav_msgs
install/uav_msgs/share/uav_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/uav_msgs/share/uav_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  uav_msgsConfig-version.cmake  uav_msgsConfig.cmake  uav_msgs__rosidl_typesupport_cExport.cmake  uav_msgs__rosidl_typesupport_introspection_cppExport.cmake
install/uav_msgs/share/uav_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/uav_msgs/share/uav_msgs/msg/: ConsensusTraj.idl  ConsensusTraj.msg  PositionCmd.idl  PositionCmd.msg
log/: latest_build
operator_splitting/: CMakeLists.txt
operator_splitting/src/: main.cpp  plot.cpp  plot.h
uav_msgs/: CMakeLists.txt
uav_msgs/msg/: ConsensusTraj.msg  PositionCmd.msg
(+37 files in other folders)
